# obs-media-controls

./: CMakeLists.txt  MediaControls.ui  README.md  buildspec.json  installer.iss.in  media-control.cpp  media-control.hpp  media-controls.cpp  media-controls.hpp  media-controls.qrc  media-controls.rc  media-slider.cpp  media-slider.hpp
.github/workflows/: build.yml
CI/macos/: media-controls.pkgproj
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini  es-ES.ini  fr-FR.ini
